<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    
    <ImageView
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:id="@+id/iv_detail_player"
            android:src="@drawable/ic_alarm"
            android:layout_width="match_parent" 
            android:layout_height="200dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textSize="18sp"
                            android:gravity="center"
                            android:text="@string/weight_kg"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:textSize="18sp"
                            android:gravity="center"
                            android:text="@string/height_m"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/player_weight"
                            android:gravity="center"
                            android:textSize="30sp"
                            android:text="@string/weight"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="50dp"/>
                    <TextView
                            android:id="@+id/player_height"
                            android:textSize="30sp"
                            android:text="@string/height"
                            android:gravity="center"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="50dp"/>
                </LinearLayout>
                <TextView
                        android:id="@+id/player_detail_role"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/deffense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
            android:id="@+id/player_detail_deskripsi"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/player_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>