<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_detail_match_date"
            android:text="@string/dateMatch"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@color/colorPrimaryDark"
                    android:id="@+id/iv_detail_home"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tv_home_detail_team_name"
                    android:layout_gravity="center"
                    android:text="@string/teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_home_detail_team_formation"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_home_detail_score"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_away_detail_score"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@color/colorPrimaryDark"
                    android:id="@+id/iv_detail_away"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/tv_away_detail_team_name"
                    android:layout_gravity="center"
                    android:text="@string/teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_away_detail_team_formation"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_goals"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/goals"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_goals"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_shots"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/shots"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_shots"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
            android:background="#b3b3b3"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lineup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_gk"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/goal_keeper"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_gk"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_deff"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/deffense"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_deff"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_mf"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/midfield"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_mf"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_fw"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/forward"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_fw"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_home_detail_sub"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:text="@string/subtitutes"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:id="@+id/tv_away_detail_sub"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>